# image-deduper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml
docs/: architecture.md
scripts/: audit.sh  check_no_destructive_calls.sh
src/dedupe/: __init__.py  __main__.py  cli.py  convert.py  hash_cache.py  info.py  manifest.py  restore.py  scan.py  similar.py  sweep.py  ui.py  walk.py
src/dedupe/cli/: __init__.py  convert.py  find_similar.py  info.py  output.py  parser.py  restore.py  scan.py  sweep.py
tests/: conftest.py  test_cli.py  test_convert.py  test_hash_cache.py  test_info.py  test_list_arg.py  test_restore.py  test_scan.py  test_similar.py  test_sweep.py
