[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dedupe"
version = "0.5.1"
description = "Find and quarantine duplicate image files for slideshow curation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "mick" }]
dependencies = [
    "rich>=13.7",
    "Pillow>=10.4",
    "pillow-heif>=0.18",
    "imagehash>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "pyright>=1.1.380",
    "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/mickmill54/image-deduper"
Issues = "https://github.com/mickmill54/image-deduper/issues"
Changelog = "https://github.com/mickmill54/image-deduper/blob/main/CHANGELOG.md"

[project.scripts]
dedupe = "dedupe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "heic: tests that require HEIC write support (skipped if unavailable)",
]
