[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dedupe"
version = "0.13.1"
description = "Find and quarantine duplicate image files for slideshow curation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "mick" }]
dependencies = [
    "rich>=13.7",
    "Pillow>=10.4",
    "pillow-heif>=0.18",
    "imagehash>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "pyright>=1.1.380",
    "build>=1.2",
    "pyinstaller>=6.0",
    # --- audit suite (see `make audit`, scripts/audit.sh) ---
    "bandit>=1.7",     # Python static security analysis
    "pip-audit>=2.7",  # CVE scan against deps
    "radon>=6.0",      # cyclomatic complexity + maintainability index
    "xenon>=0.9",      # radon's enforcement counterpart (gates on threshold)
    "vulture>=2.10",   # dead-code detection
]

[project.urls]
Homepage = "https://github.com/mickmill54/image-deduper"
Issues = "https://github.com/mickmill54/image-deduper/issues"
Changelog = "https://github.com/mickmill54/image-deduper/blob/main/CHANGELOG.md"

[project.scripts]
dedupe = "dedupe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "heic: tests that require HEIC write support (skipped if unavailable)",
]
